typescript/checker/tests/conformance/es7/trailingCommasInGetter.ts.stderr
error: Expected RParen, got Some(Comma)
 --> $DIR/tests/conformance/es7/trailingCommasInGetter.ts:2:11
  |
2 |     get x(,) { return 0; }
  |           ^

